
####   Don't forget to change the version number in configure.ac!   ####

04 Oct 2005 rename FEATURE_BRANCH_DETECTION as FEATURE_PER3 - Roger Bowler
04 Oct 2005 rename FEATURE_CPACF_ENHANCEMENTS as FEATURE_MESSAGE_SECURITY_ASSIST_EXTENSION_1 - Roger Bowler
22 Sep 2005 tape/27: *proper* VC7 Large File Support - Fish 
21 Sep 2005 Init cckd->l2active to -1 instead of 0 - Greg
21 Sep 2005 tweak concpy to avoid double byteswap - Fish
21 Sep 2005 Add inline assembler assists to startup buildinfo display - Fish
21 Sep 2005 sysblk.mipsrate now per second instead of millisecond, fix
            bug in timer_update_thread when elapsed < 1 millisec - Fish
20 Sep 2005 Fix divide_single fixed-point-divide-exception check - Greg
16 Sep 2005 hercgui/22: issue dasdload REQCYL= progress msg sooner - Fish
16 Sep 2005 tape/27: discard bug-ridden VC7 Large File Support - Fish
16 Sep 2005 startio should return cc 2 if startpending is on - Greg
16 Sep 2005 Changes to allow building via Cygwin if desired - Fish
16 Sep 2005 Bring MSVC branch up-to-date with head branch - Fish
05 Sep 2005 Correct SSID in Sense Subsystem Status and Read Device Characteristics - Roger Bowler
05 Sep 2005 Sense Subsystem Status for 3990 model 6 - Roger Bowler
04 Sep 2005 tt32_open: 'errno' clobber workaround - Fish
04 Sep 2005 tt32_get_default_iface: never return NULL to prevent crash - Fish
04 Sep 2005 Read Subsystem Data: Storage Paths, Subsystem Statistics - Roger Bowler
03 Sep 2005 Don't report #of host processors if not known - Fish
03 Sep 2005 w32ctca.c: LoadLibrary doesn't like forward slashes - Fish
03 Sep 2005 dasdconv: 1. HercGUI compatibility changes, 2. add -lfs option
            to create one very large output file - Fish
02 Sep 2005 Perform Subsystem Function CCW: Set Interface Id order - Roger Bowler
02 Sep 2005 ckddasd Read Subsystem Data CCW - Roger Bowler
31 Aug 2005 Fix some bugs in w32stape.c - Fish
            1. w32_read_tape: was returning an error when a tapemark