@@ -21,6 +21,7 @@
 #define FEATURE_COMPRESSION
 #define FEATURE_CPU_RECONFIG
 #define FEATURE_DAT_ENHANCEMENT
+//#define FEATURE_DAT_ENHANCEMENT_FACILITY_2                       /*@Z9*/
 #define FEATURE_DUAL_ADDRESS_SPACE
 #define FEATURE_EMULATE_VM
 #define FEATURE_ESAME
@@ -49,7 +50,6 @@
 #define FEATURE_IO_ASSIST
 #define FEATURE_LINKAGE_STACK
 //#define FEATURE_LOAD_ADDITIONAL                                  /*@Z9*/
-//#define FEATURE_LOAD_PAGE_TABLE_ENTRY_ADDRESS                    /*@Z9*/
 #define FEATURE_LOAD_REVERSED
 #define FEATURE_LOCK_PAGE
 #define FEATURE_LONG_DISPLACEMENT
