@@ -94,6 +94,7 @@
 #undef FEATURE_COMPRESSION
 #undef FEATURE_CPU_RECONFIG
 #undef FEATURE_DAT_ENHANCEMENT
+#undef FEATURE_DAT_ENHANCEMENT_FACILITY_2                       /*@Z9*/
 #undef FEATURE_DUAL_ADDRESS_SPACE
 #undef FEATURE_EMULATE_VM
 #undef FEATURE_ESAME
@@ -124,7 +125,6 @@
 #undef FEATURE_IO_ASSIST
 #undef FEATURE_LINKAGE_STACK
 #undef FEATURE_LOAD_ADDITIONAL                                  /*@Z9*/
-#undef FEATURE_LOAD_PAGE_TABLE_ENTRY_ADDRESS                    /*@Z9*/
 #undef FEATURE_LOAD_REVERSED
 #undef FEATURE_LOCK_PAGE
 #undef FEATURE_LONG_DISPLACEMENT
