@@ -774,9 +774,9 @@
 #endif /*!defined(FEATURE_LOAD_ADDITIONAL)*/                    /*@Z9*/
 
 
-#if !defined(FEATURE_LOAD_PAGE_TABLE_ENTRY_ADDRESS)             /*@Z9*/
+#if !defined(FEATURE_DAT_ENHANCEMENT_FACILITY_2)                /*@Z9*/
  UNDEF_INST(load_page_table_entry_address)                      /*@Z9*/
-#endif /*!defined(FEATURE_LOAD_PAGE_TABLE_ENTRY_ADDRESS)*/      /*@Z9*/
+#endif /*!defined(FEATURE_DAT_ENHANCEMENT_FACILITY_2)*/         /*@Z9*/
 
  
 #if !defined(FEATURE_STORE_CLOCK_FAST)                          /*@Z9*/
